--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,11 @@ body {
 	background: #CCCCCC;
 	margin-top: 0;
 	padding-top: 0;
+	height: 100%;
+}
+
+html body {
+
 }
 
 .yield {
@@ -26,17 +31,23 @@ body {
 	color: white;
 	padding: 2%;
 	margin-top: 2%;
-		overflow: auto;
+	overflow: auto;
+	height: 100%;
+	padding-bottom: 4em;
 }
 
 .container {
 	width:1000px;
+	min-height: 100%;
+	height: 100%;
 	margin-top: 0;
 	padding-top: 0;
 	margin-left:auto;
 	margin-right:auto;
 	background-color: #707a7a;
+	position: relative;
 }
+
 
 .strict {
 }
@@ -50,10 +61,14 @@ header {
 }
 
 footer {
-	padding-top: 10px;
-	padding-bottom: 20px;
-	margin-bottom: 20px;
+	width: 100%;
+	height: 50px;
 	background-color: white;
+	/*width: 100%; /* ширина футера */
+    /*height: 100px; */
+	position: absolute; 
+    bottom: -50px; 
+    background-color: #707a7a;
 }
 
 nav {
