--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 		<%= yield %>
 		</div>
     	<%= debug(params) if Rails.env.development? %>
+      <div class="clear"></div>
       <%= render 'layouts/footer' %>
   <%= javascript_include_tag "collapse" %>
 
