change of the footer

--- a/app/views/storypoints/play.html.erb
+++ b/app/views/storypoints/play.html.erb
@@ -43,7 +43,8 @@
 		  jNotify(
 		    "You've finished this plot! <br />You can start plot again by pressing <strong>reload</strong>",
 		    {
-		      autoHide : false, // added in v2.0
+		      autoHide : false,
+		      clickOverlay : true, // added in v2.0
 		      TimeShown : 3000,
 		      HorizontalPosition : 'center'
 		  }
